tests/negative/class_inheritance_cycle.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that circular inheritance is detected and reported as an error.

class A extends B {}
class B extends A {} // Error: Circular inheritance
